--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,24 @@
 @font-face {
-  font-family: "HsJandari";
-  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/2510-2@1.0/HSJandari.woff2")
-    format("woff2");
-  font-weight: normal;
+  font-family: "Aggravo";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/SBAggroL.woff")
+    format("woff");
+  font-weight: 300;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Aggravo";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/SBAggroM.woff")
+    format("woff");
+  font-weight: 500;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Aggravo";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/SBAggroB.woff")
+    format("woff");
+  font-weight: 700;
   font-display: swap;
 }
 
@@ -13,20 +29,18 @@
   --color-accent: var(--color-blue);
   --color-accent-variant: var(--color-orange);
   --color-text: var(--color-white);
-
   --color-black: #050a13;
   --color-gray: #1b1e26;
   --color-blue: #03e8f9;
-  --c0lor-orange: #fd6413;
+  --color-orange: #fd6413;
   --color-white: #fff;
-
   --size-max-width: 1200px;
 }
 * {
   box-sizing: border-box;
 }
 body {
-  font-family: GMarketSans;
+  font-family: SchoolSafetyRoundedSmile;
   margin: 0;
 }
 a {
@@ -36,6 +50,22 @@ a {
 ul {
   list-style: none;
   padding: 0;
+}
+.section {
+  padding: 4rem;
+  text-align: center;
+}
+.max-container {
+  max-width: var(--size-max-width);
+  margin: auto;
+}
+.title {
+  font-size: 2.5rem;
+  margin: 1rem 0;
+}
+.description {
+  font-size: 1.5rem;
+  margin: 0.5rem 0;
 }
 /* header */
 .header {
@@ -75,17 +105,13 @@ ul {
   border: 1px solid var(--color-accent);
   border-radius: 5px;
 }
-
 /* home */
 #home {
   background-color: var(--color-primary);
   color: var(--color-text);
   padding: 7rem 1rem 5rem;
-
-  padding: 7rem 1rem;
   text-align: center;
 }
-
 .home__avatar {
   width: 250px;
   height: 250px;
@@ -93,20 +119,16 @@ ul {
   border: 3px solid var(--color-accent);
   object-fit: cover;
 }
-
 .home__title {
   font-size: 3rem;
   margin-bottom: 1rem;
 }
-
 .home__title--strong {
   color: var(--color-accent);
 }
-
 .home__description {
   font-size: 1.5rem;
 }
-
 .home__contact {
   display: inline-block;
   background-color: var(--color-accent);
@@ -116,9 +138,61 @@ ul {
   font-weight: bold;
   border-radius: 5px;
 }
-
 .home__contact:hover {
   background-color: transparent;
   color: var(--color-text);
   outline: 2px solid var(--color-accent);
+}
+.majors {
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+  margin: 2.5rem 0;
+}
+.major {
+  width: 30%;
+  background-color: var(--color-primary-variant);
+  padding: 2rem 1rem;
+  color: var(--color-text);
+  border-radius: 1rem;
+  box-shadow: 5px 10px 10px rgba(0, 0, 0, 0.4);
+}
+.major__icon {
+  font-size: 4rem;
+  margin: 1rem 0;
+  color: var(--color-accent);
+}
+.major:hover .major__icon {
+  transform: rotate(-15deg) scale(1.2);
+  transition: all 300ms ease;
+}
+.major__title {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+.jobs {
+  text-align: start;
+}
+
+.job {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin-bottom: 1rem;
+}
+
+.job__name {
+  color: var(--color-primary);
+}
+
+.job__period {
+  color: var(--color-primary);
+  font-size: 0.8rem;
+}
+
+.jobs img {
+  width: 300px;
+  margin-right: 100px;
 }
