--- a/css/style.css
+++ b/css/style.css
@@ -23,19 +23,6 @@
 }
 
 /* Global */
-:root {
-  --color-primary: var(--color-black);
-  --color-primary-variant: var(--color-gray);
-  --color-accent: var(--color-blue);
-  --color-accent-variant: var(--color-orange);
-  --color-text: var(--color-white);
-  --color-black: #050a13;
-  --color-gray: #1b1e26;
-  --color-blue: #03e8f9;
-  --color-orange: #fd6413;
-  --color-white: #fff;
-  --size-max-width: 1200px;
-}
 /* Global */
 :root {
   --color-primary: var(--color-black);
@@ -54,7 +41,7 @@
   box-sizing: border-box;
 }
 body {
-  font-family: Aggravo;
+  font-family: Paperozi;
   margin: 0;
 }
 a {
@@ -80,6 +67,11 @@ ul {
 .description {
   font-size: 1.5rem;
   margin: 0.5rem 0;
+}
+button {
+  background-color: transparent;
+  outline: 0;
+  border: 0;
 }
 /* header */
 .header {
@@ -170,17 +162,16 @@ ul {
   padding: 2rem 1rem;
   color: var(--color-text);
   border-radius: 1rem;
-  cursor: default;
   box-shadow: 5px 10px 10px rgba(0, 0, 0, 0.4);
 }
 .major__icon {
   font-size: 4rem;
   margin: 1rem 0;
   color: var(--color-accent);
-  transition: all 300ms ease;
 }
 .major:hover .major__icon {
   transform: rotate(-15deg) scale(1.2);
+  transition: all 300ms ease;
 }
 .major__title {
   font-size: 1.5rem;
@@ -239,6 +230,12 @@ ul {
   padding: 1rem;
   gap: 0.5rem;
 }
+.body {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  gap: 0.5rem;
+}
 .bar__metadata {
   display: flex;
   justify-content: space-between;
@@ -259,4 +256,92 @@ ul {
   padding: 1rem;
   background-color: var(--color-primary);
   filter: brightness(150%);
+}
+/* work */
+#work {
+  background-color: var(--color-primary);
+  color: var(--color-text);
+}
+.categories {
+  display: flex;
+  justify-content: center;
+  margin: 2.5rem;
+  gap: 1rem;
+}
+.category {
+  position: relative;
+  color: var(--color-text);
+  font-size: 1.1rem;
+  padding: 0.5rem 3rem;
+  border-radius: 5px;
+  border: 1px solid var(--color-accent);
+  cursor: pointer;
+  white-space: nowrap;
+}
+.category--selected {
+  background-color: var(--color-accent);
+  color: var(--color-primary);
+}
+.category__count {
+  opacity: 0;
+  position: absolute;
+  top: -20px;
+  right: 16px;
+  width: 28px;
+  height: 28px;
+  line-height: 28px;
+  border-radius: 100%;
+  background-color: var(--color-accent-variant);
+  color: var(--color-text);
+  transition: all 250ms ease-in;
+}
+.category--selected .category__count,
+.category:hover .category__count {
+  opacity: 1;
+  top: 0;
+}
+.projects {
+  display: grid;
+  /* 가로로 4개의 칸을 만들고 각각의 칸을 동일한 너비로 나눔 */
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 1rem;
+}
+.project {
+  position: relative;
+  border-radius: 8px;
+  overflow: hidden;
+}
+.project__img {
+  width: 100%;
+}
+.project__metadata {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-black);
+  opacity: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transition: all 250ms ease-in;
+  transform: translateY(-10px);
+}
+.project__metadata:hover {
+  opacity: 0.8;
+  transform: translateY(0px);
+}
+.project__title:after {
+  content: "";
+  display: block;
+  position: relative;
+  left: 50%;
+  transform: translate(-50%);
+  margin: 0.5rem 0;
+  width: 50px;
+  height: 2px;
+  background-color: var(--color-accent);
 }
